--- a/unique/lib/README
+++ b/unique/lib/README
@@ -1,3 +1,3 @@
-There are will have been allocated object's archives or shared objects.
+There are will have been allocated shared modules.
 
 Don't delete this directory....
