--- a/tools/gimp/README
+++ b/tools/gimp/README
@@ -1,1 +1,5 @@
 Coming soon!
+
+Exporting in batch mode:
+
+    gimp --no-interface --batch '(lunique-texture-export-batch RUN-NONINTERACTIVE 0 0 "<path/to/file.xcf>")' '(gimp-quit 1)'
